# vc-wallet

./: .gitignore  README.md  VcWallet.sln  docker-compose.yml  vc-wallet.sln
Bitcoin/: Bitcoin.csproj  IBitcoinClient.cs
Bitcoin/Interfaces/: IBitcoinFeeProvider.cs  IBitcoinUtxoProvider.cs
Bitcoin/Models/: BitcoinNetwork.cs  BtcAddress.cs  BtcPartiallySignedBitcoinTransactions.cs  BtcUtxo.cs
Core/Enums/: BlockRefKind.cs  TxStatus.cs
Core/Interfaces/: IBlockchainDataFetcher.cs  ITransactionSigner.cs  (+1 more)
Evm/: IEvmClient.cs
Gateway/: Gateway.http  Gateway.sln
UnitTests/: DomainTests.cs  UnitTests.csproj
VcWallet.Api/: AuthDbContext.cs  Program.cs  VcWallet.Api.csproj  VcWallet.Api.http  appsettings.json
VcWallet.Business/: VcWallet.Business.csproj
VcWallet.DataAccess/: VcWallet.DataAccess.csproj  VcWalletDbContext.cs
VcWallet.Domain/: Issuer.cs  SampleData.cs  Tenant.cs
VcWallet.Eth.Contracts/: VcWallet.Eth.Contracts.csproj
Verifier/: Verifier.sln
app/: README.md  package.json
contracts/: IRoleManaged.sol  ITenantGoverned.sol  off_chain_hub_governance.sol  off_chain_quorum.sol  off_chain_tenant.sol  on_chain_hub_governance.sol  on_chain_quorum.sol  on_chain_tenant_contract.sol  profile_contract.sol  quorum_base.sol  vc_registry_tenants.sol
services/: Cargo.toml
services/prover-service/: Cargo.toml  build.rs
services/prover-service/proto/: prover.proto
services/prover-service/src/: circuit_registry.rs  lib.rs  main.rs  proof.rs  service.rs
services/prover-service/tests/: grpc_roundtrip.rs
smart contracts/: keys
v17/: DocumentLayout.json
(+157 files in other folders)
